WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87381
Form controls in <fieldset disabled> should not be validated.
https://bugs.webkit.org/show_bug.cgi?id=87381
Summary
Form controls in <fieldset disabled> should not be validated.
Kent Tamura
Reported
2012-05-24 05:50:00 PDT
1. Open data:text/html,<style>:invalid { background-color:red;} </style><input required disabled><fieldset disabled><input required></fieldset> EXPECTED: the second text field should not be red. ACTUAL: the second text field is red.
Attachments
Patch
(8.65 KB, patch)
2012-05-28 19:34 PDT
,
Kent Tamura
morrita
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2012-05-28 19:34:28 PDT
Created
attachment 144427
[details]
Patch
Kent Tamura
Comment 2
2012-05-28 21:08:56 PDT
Committed
r118721
: <
http://trac.webkit.org/changeset/118721
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug