third_party/WebKit/Source/WebCore/html/HTMLFormControlElement.h
@@ -53,6 +53,7 @@ public:
     bool formNoValidate() const;
 
     void updateFieldSetAndLegendAncestor() const;
+    void ancestorDisabledStateWasChanged();
 
     virtual void reset() { }
 
